[FIX] some layout issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,6 +22,10 @@
     @apply border-gray-200 dark:border-gray-800;
   }
 
+  .primary_border_color {
+    @apply border-indigo-800 dark:border-indigo-600;
+  }
+
   .app_text_color {
     @apply text-gray-800 dark:text-gray-200;
   }
